--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1"
+    "babel-runtime": "^6.6.1",
+    "prop-types": "^15.5.10"
   },
   "peerDependencies": {
-    "react": "^0.14.8 || ^15.0.1",
+    "react": "^0.14.8 || ^15.0.1 || ^16.0.0-alpha.0",
     "react-relay": "^1.0.0"
   },
   "devDependencies": {
